# smart-home-simulator

./: .gitignore  CMakeLists.txt  README.md  classes.wsd
data/: log.txt
include/: Actuator.hpp  AirConditioner.hpp  AirConditioning.hpp  AirPurifier.hpp  Alarm.hpp  Device.hpp  DoorLock.hpp  DoorSensor.hpp  Environment.hpp  Heater.hpp  HumiditySensor.hpp  Light.hpp  LightSensor.hpp  Logger.hpp  MotionSensor.hpp  Observable.hpp  PollutionSensor.hpp  Room.hpp  Sensor.hpp  SmartHome.hpp  TemperatureSensor.hpp  WindowMotor.hpp  WindowSensor.hpp  sh_random.hpp  sh_std.hpp
results/: log.txt
src/: Actuator.cpp  AirConditioner.cpp  AirConditioning.cpp  AirPurifier.cpp  Alarm.cpp  Device.cpp  DoorLock.cpp  DoorSensor.cpp  Environment.cpp  Heater.cpp  HumiditySensor.cpp  Light.cpp  LightSensor.cpp  Logger.cpp  MotionSensor.cpp  Observable.cpp  PollutionSensor.cpp  Room.cpp  Sensor.cpp  SmartHome.cpp  TemperatureSensor.cpp  WindowMotor.cpp  WindowSensor.cpp  main.cpp
